# dataxplan

./: .coverage  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: example.py  framework.py
dataxplan/: __init__.py  _result.py  cli.py  compare.py  context.py  findings.py  metrics.py  parse.py  render.py  report.py  run.py
examples/: README.md  bosch_production_hash_join.json  garments_textile_seq_scan.json  job_imdb_misestimate.json  mercedes_automotive_lossy_bitmap.json  nyc_taxi_sort_spill.json  secom_semiconductor_index_only.json  tpch_lineitem_filter.json
tests/: conftest.py  test_cli.py  test_compare.py  test_context.py  test_examples.py  test_findings.py  test_formats.py  test_integration_pg.py  test_metrics.py  test_parse.py  test_render.py  test_report.py  test_run.py
tests/fixtures/: clean.json  misestimate_nestloop.json  no_analyze.json  seq_scan_filter.json  sort_spill.json
