[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dataxplan"
version = "0.1.3"
description = "Read PostgreSQL EXPLAIN plans locally: parse the plan, compute self time and estimation error, flag documented problems, compare plans, and guard them in CI. No database connection, deterministic."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = []
keywords = [
    "postgresql", "postgres", "explain", "query-plan", "performance",
    "query-optimization", "database", "sql", "explain-analyze", "dba",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
dataxplan = "dataxplan.cli:main"

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
yaml = ["pyyaml>=5"]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy", "build", "matplotlib>=3.5", "pyyaml>=5"]

[project.urls]
Homepage = "https://github.com/arikanatakan/dataxplan"
Repository = "https://github.com/arikanatakan/dataxplan"
Issues = "https://github.com/arikanatakan/dataxplan/issues"
"MCP server" = "https://github.com/arikanatakan/dataxplan-mcp"

[tool.setuptools.packages.find]
include = ["dataxplan*"]

[tool.setuptools.package-data]
dataxplan = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
